# Sculpt

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  OpenGL.sln  README.md  lsan.supp
.github/workflows/: release.yml
OpenGL/: CMakeLists.txt  OpenGL.vcxproj  OpenGL.vcxproj.filters  imgui.ini
OpenGL/Dependencies/GLAD/include/glad/: glad.h
OpenGL/Dependencies/GLAD/src/: glad.c
OpenGL/doc/: .$Architecture.drawio.bkp  .$Architecture.drawio.dtmp  .$ClassDiagram3.0.drawio.bkp  .$ClassDiagram3.0.drawio.dtmp  .$Diagrama sin título.drawio.dtmp  Architecture.drawio  ClassDiagram3.0.drawio  Diagrama sin título.drawio  README.md  redesign.drawio
OpenGL/res/shaders/: Basic.shader  BasicColor.shader  Picking.shader  Square.Shader  modelmesh.shader
OpenGL/res/shaders/frag/: grid.frag  grid.fs
OpenGL/res/shaders/test/: testTexture.shader  testTriangle.shader
OpenGL/res/shaders/vert/: grid.vs
OpenGL/src/: Application.cpp  Camera.cpp  Camera.h  Core.h  IndexBuffer.cpp  IndexBuffer.h  InputState.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.h  glewDbg.h  glhead.h  main.cpp
OpenGL/src/AssetManager/: AssetHandle.h  AssetManager.cpp  AssetRegistry.cpp  AssetRegistry.h  IAsset.h
OpenGL/src/AssetManager/Loader/: LoaderSystem.cpp  LoaderSystem.h  MeshLoader.cpp  TextureLoader.cpp
OpenGL/src/Codes/: KeyCodes.h  MouseCodes.h
OpenGL/src/Core/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.cpp  Core.h  Entity.h  InputManager.h  InputState.cpp  Scene.cpp  Scene.h  TIme.cpp  Time.h
OpenGL/src/Core/Components/: Component.h
OpenGL/src/Core/Systems/: RenderingSystem.cpp  RenderingSystem.h
OpenGL/src/Editor/: EditorCameraController.cpp  EditorCameraController.h  EditorUI.cpp  EditorUI.h  PickingTexture.cpp  PickingTexture.h  SelectionSystem.cpp  SelectionSystem.h  inf_grid.cpp  inf_grid.h
OpenGL/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
OpenGL/src/Graphics/: IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
OpenGL/src/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGL/src/Graphics/Geometry/: Mesh.cpp  Mesh.h  Vertex.h
OpenGL/src/Graphics/Loaders/: ModelLoader.cpp  ModelLoader.h
OpenGL/src/Graphics/Rendering/: RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  SelectionContext.h
OpenGL/src/Graphics/Shading/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.h
OpenGL/src/Math/: maths.cpp  maths.h  quaternion.h
OpenGL/src/Platf/Win/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
OpenGL/src/Platform/: Application.cpp  Application.h
OpenGL/src/Platform/CoreUtils/: GLDebug.h  Log.cpp  Log.h
OpenGL/src/Platform/CoreUtils/Math/: maths.h  matx.h  vec2.h  vec3.h  vec4.h
OpenGL/src/Platform/Events/: Event.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
OpenGL/src/Platform/Graphics/: Framebuffer.h  RenderCommand.cpp  RenderCommand.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
OpenGL/src/Platform/Graphics/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
OpenGL/src/Platform/Layers/: EditorLayer.cpp  EditorLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  ServiceLayer.cpp  ServiceLayer.h
OpenGL/src/Platform/System/: GlfwWindow.cpp  GlfwWindow.h  Input.cpp  Window.h
OpenGL/src/Platform/System/Events/: Event.h  KeyboardEvent.h  WindowEvent.h
OpenGL/src/Platform/System/Input/: GlfwInput.cpp  GlfwInput.h  Input.cpp  Input.h  KeyCodes.h
OpenGL/src/Platform/System/Window/: GlfwWindow.cpp  GlfwWindow.h  Window.h
OpenGL/src/Renderer/: Camera.cpp  Camera.h  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h
OpenGL/src/Scene/: GameObject.cpp  GameObject.h  Object.h  Scene.cpp  Scene.h
OpenGL/src/Scene/Components/: Component.h  MeshRendererComponent.cpp  MeshRendererComponent.h
OpenGL/src/Utils/: Shader.cpp  Shader.h
OpenGL/src/buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
OpenGL/src/maths/: maths.cpp  maths.h  matx.h  quat.h  quaternion.h
OpenGL/src/maths/matx/: matx.h
OpenGL/src/maths/vec/: vec2.h  vec3.h
OpenGL/src/tests/: TestBatchRendering.cpp  TestBatchRendering.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  test3.cpp  test3.h  tests.cpp  tests.h
OpenGL/x64/Debug/: Module.ixx.ifc.dt.d.json  Module.ixx.ifc.dt.module.json  Module.ixx.ifc.dt.module.json.command  PickingTexture.ixx.ifc.dt.d.json  PickingTexture.ixx.ifc.dt.module.json  PickingTexture.ixx.ifc.dt.module.json.command  modelloader.obj.enc  vc143.idb
OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
doc/: .$ClassDiagram3.0.drawio.bkp  .$redesign.drawio.bkp  ArchitectureGaps.md  ClassDiagram3.0.drawio  MissingFeatures.md  README.md  SelectionSystem_Plan.md  audit_sobreingenieria.md  features.md  math_refactor_plan.md
doc/skills/: architecture-uml.md  edit-mode.md  features-summary.md  gl-patterns.md  math-api.md  planned-arch.md
res/shaders/: Basic.shader  BasicColor.shader  Picking.shader  debug_selection.shader  grid.shader  modelmesh.shader  outline.shader  wireframe.shader
src/: README.md  main.cpp
src/AssetManager/: AssetHandle.h  AssetHandle.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  AssetRegistry.cpp  AssetRegistry.h  AssetRegistry.hpp  IAsset.hpp
src/Core/: Entity.hpp  Scene.cpp  Scene.h  Scene.hpp  glhead.hpp
src/Editor/: EditorCameraController.cpp  EditorCameraController.h  EditorCameraController.hpp  EditorLayer.cpp  EditorLayer.hpp  EntityFactory.cpp  EntityFactory.hpp  ImGuiLayer.cpp  (+6 more)
tests/: math_test.cpp
tools/: check_layers.py
(+146 files in other folders)
